2008-10-17  Ben Van Mechelen  <me@benvm.be>

	* data/garmon.schemas:
	    list plugins correctly in plugins.saved schema
	    

2008-10-17  Ben Van Mechelen  <me@benvm.be>

	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/live_data/live_data.glade:
	    small changes in the layout
	

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    Add update_name property to SensorProgressView
	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	    make the gui look like LiveData
	

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* plugins/Makefile.am:
	* plugins/o2_sensors/Makefile.am:
	* plugins/o2_sensors/o2_sensors.glade:
	* plugins/o2_sensors/o2_sensors.py:
	    remove o2 sensors plugin
	    

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* scripts/elm_sim.py:
	    add pid responses for egr valve
	    

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    correct egr_error so it returns an int


2008-10-15  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    rename lambda to o2
	    add egr functions
	* garmon/widgets.py:
	    remove UnitMixin from ProgressView
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	    Add a deactivate_all button
	    Add egr widgets
	

2008-10-15  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    adjust window size
	* plugins/live_data/live_data.glade:
	    new layout
	* plugins/live_data/live_data.py:
	    update for the new layout
	

2008-10-14  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	    ???
	* garmon/__init__.py:
	    get version always from defs.py
	* garmon/garmon_app.py:
	    correct website in about box
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py: