@@ -1,3 +1,9 @@
+2008-10-20  Ben Van Mechelen  <me@benvm.be>
+
+	* garmon/scheduler.py:
+	    Fix the add method
+	    
+
 2008-10-17  Ben Van Mechelen  <me@benvm.be>
 
 	* data/garmon.schemas:
